--- a/styles.css
+++ b/styles.css
@@ -16,17 +16,17 @@ p{
 
 
 body {
-  margin: 0;
+  margin-left: 2rem;
+  margin-right: 2rem;
   font-family: system-ui, sans-serif;
   color: black;
   background-color: #FBFFDC;
 }
 
-main {
-  padding: 1rem;
-}
 
-.img{
+
+img{
+  display: block;
   margin: 0 auto;
 }
 
