--- a/styles.css
+++ b/styles.css
@@ -16,8 +16,6 @@ p{
 
 
 body {
-  margin-left: 2rem;
-  margin-right: 2rem;
   font-family: system-ui, sans-serif;
   color: black;
   background-color: #FBFFDC;
@@ -26,6 +24,11 @@ body {
 
 
 img{
+  display: block;
+  margin: 0 auto;
+}
+
+iframe{
   display: block;
   margin: 0 auto;
 }
@@ -46,23 +49,15 @@ h3{
 
 }
 
-.box2{
-  background-color: #98EECC;
-  padding: 5px;
-  position: relative;
-  left: 25px;
-  
-
-}
-
-.map{
-  margin: 0 auto;
-}
 
 .link{
   position: absolute;
   left: 300px;
  
+}
+
+address{
+  text-align: center;
 }
 
 footer{
